--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="webchat" role="main"></div>
         <script>
           (async function() {
-             const res = await fetch('http://chatmasukbotan.azurewebsites.net/api/token', { method: 'POST' });
+             const res = await fetch('https://chatmasukbotan.azurewebsites.net/api/token', { method: 'POST' });
             const { token } = await res.json();
             
             window.WebChat.renderWebChat(
