--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div id="webchat" role="main"></div>
         <script>
           (async function() {
-             const res = await fetch('https://chatmasukbotan.azurewebsites.net/api/token', { method: 'POST' });
+             const res = await fetch('https://chatmasukbotan.azurewebsites.net/api/token', { method: 'POST',
+                                                                                           headers:'Content-type': 'application/json'});
             const { token } = await res.json();
             
             window.WebChat.renderWebChat(
