--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <script>
           (async function() {
              const res = await fetch('https://chatmasukbotan.azurewebsites.net/api/token', { method: 'POST',
-                                                                                           headers:'Content-type': 'application/json'});
+                                                                                           headers:{'Content-type': 'application/json'}});
             const { token } = await res.json();
             
             window.WebChat.renderWebChat(
